# researchers-night

./: .dockerignore  Dockerfile  OPENSHIFT_DEPLOYMENT.md  app_redirect.py  deploy-openshift.bat  deploy-openshift.sh  deploy.bat  deploy.sh  docker-compose.yml  get_data.py  main - copia.py  main.py  pyproject.toml  requirements.txt  scraped_phones.csv  scraped_phones_summary.csv  scraped_phones_summary.xlsx  smartphones_2024_2025_prices.csv
apps/: UI_phone_mcdm.py  UI_phone_traditional.py
assets/: style.css
data/: Phone_dataset_updated.csv  Phone_dataset_updated.xlsx  Phone_details.csv  Phone_details2.csv  Phones_2025.csv  data-mobile-clean.xlsx  data-mobile-clean2.csv
openshift/: buildconfig.yaml  configmap.yaml  deployment.yaml  deploymentconfig.yaml  imagestream.yaml  route.yaml  service.yaml  template.yaml
pages/: app.py
utils/: dash_reusable_components.py
